# tennis-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-entrypoint.sh  project-brief.md  pyproject.toml
bot/: basket.py  browser.py  config.py  notifier.py  scanner.py  scheduler.py  session.py
docs/: deploy.md
issues/: 001-project-scaffolding-config-tests.md  002-config-loader-implementation.md  003-notifier-tests-stubs.md  004-notifier-implementation.md  005-lta-sso-tests-stubs.md  006-lta-sso-implementation.md  007-court-scanner-tests-stubs.md  008-court-scanner-implementation.md  009-basket-manager-tests-stubs.md  010-basket-manager-implementation.md  011-scheduler-integration-tests.md  012-scheduler-implementation.md  013-oracle-cloud-deployment.md  prd.md
tests/: test_basket.py  test_config.py  test_notifier.py  test_scanner.py  test_scheduler.py  test_session.py
