[project]
name = "tennis-bot"
version = "0.1.0"
description = "Scans ClubSpark for tennis court slots and notifies via push/SMS."
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.52.0",
    "python-dotenv>=1.2.2",
    "twilio>=9.10.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
